objects/Assignment__c.object
<CustomObject>
    <label>Assignment</label>
    <nameField>
        <displayFormat>AID-{0000}</displayFormat>
        <label>Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role of the resource on this project(e.g. Developer, instructor)</description>
        <inlineHelpText>Role of the resource on this project(e.g. Developer, instructor)</inlineHelpText>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Tentative,Scheduled, Closed</description>
        <inlineHelpText>Tentative,Scheduled, Closed</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date that the assigned resource finishes work on the project</description>
        <inlineHelpText>Date that the assigned resource finishes work on the project</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date that the assigned resource begins work on the project</description>
        <inlineHelpText>Date that the assigned resource begins work on the project</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Discription of this assignment(e.g. Design, Development)</description>
        <inlineHelpText>Discription of this assignment(e.g. Design, Development)</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hourly_Cost__c</fullName>
        <description>Internal cost of the assigned resource</description>
        <inlineHelpText>Internal cost of the assigned resource</inlineHelpText>
        <label>Hourly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <description>Rate at which the assigned resource is billed out</description>
        <inlineHelpText>Rate at which the assigned resource is billed out</inlineHelpText>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <description>Numbers of hours to be worked during this assignment</description>
        <inlineHelpText>Numbers of hours to be worked during this assignment</inlineHelpText>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Cost__c</fullName>
        <formula>Total_Hours__c  *  Hourly_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Margin__c</fullName>
        <formula>Planned_Cost__c  -  Planned_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Revenue__c</fullName>
        <formula>Total_Hours__c  *  Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currently_Assigned__c</fullName>
        <formula>IF(TODAY()  &gt;= Start_Date__c   &amp;&amp; TODAY() &lt;= End_Date__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currently Assigned?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>